--- a/_config.yml
+++ b/_config.yml
@@ -14,23 +14,17 @@ author: Fábio Madeira
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
 baseurl: /vitae/
-title: Chris Turner's Resume
-name: Chris Turner
-email: christurner@me.com
-email_full: mailto:youremail@me.com
-website: github.io/sustain
-website_full: https://jekyller.github.io/sustain
+title: Logan Reed's Resume
+name: Logan Reed
+email: deernagol@protonmail.com
+email_full: mailto:deernagol@protonmail.com
+website: github.io/deernagol
+website_full: https://jekyller.github.io/deernagol
 github: trending
 twitter: twitter
-tel: +44 0000 000000
-tel_full: tel:+440000000000
-google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
-address:
-  street: 44 Perth Street
-  postcode: EH3 5BL
-  city: Edinburgh
-  country: United Kingdom
-google_analytics: UA-69300817-1
+tel: +1 816 2486946
+tel_full: tel:+18162486946
+google_analytics:
 
 # needed for travis-ci build
 exclude: [vendor]
