--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-# OS X
+_site
+.sass-cache
+.sass-cache/
 .DS_Store
-
-# Jekyll build
-/_site/
-.jekyll-metadata
-Gemfile.lock
-
-# webstorm
-.idea/
-
-# others
-*.swp
